--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Huddle-landing-page</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <div class="container">
+    <header>
+      <nav class="navbar">
+        <img src="./images/logo.svg" alt="">
+        <button class="tryitfreebtn">Try It Free</button>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <div class="section-container">
+          <div class="text-container">
+            <h1>Build The Community <br>Your Fans Will Love</h1>
+            <p>
+              Huddle re-imagines the way we build communities. You have<br> a voice, but so does your audience.
+              Create connections with<br> your users as you engage in genuine discussion.
+            </p>
+            <button>Get Started For Free</button>
+          </div>
+          <img src="./images/illustration-mockups.svg" alt="Desktop preview of the platform">
+        </div>
+      </section>
+    </main>
+  </div>
 </body>
+
 </html>
