--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Huddle-landing-page</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
   <div class="container">
     <header>
       <nav class="navbar">
-        <img src="./images/logo.svg" alt="">
+        <img src="./images/logo.svg" alt="logo">
         <button class="tryitfreebtn">Try It Free</button>
       </nav>
     </header>
@@ -33,6 +36,89 @@
       </section>
     </main>
   </div>
+
+  <section class="card-container">
+    <div class="card">
+      <div class="card-text">
+        <h2>Grow Together</h2>
+        <p>Generate meaningful dicussions with your audience and build a strong, loyal community. Thick of
+          the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
+      <img src="./images/illustration-grow-together.svg" alt="grow-together">
+    </div>
+
+    <div class="card">
+      <img src="./images/illustration-flowing-conversation.svg" alt="grow-together">
+      <div class="card-text">
+        <h2>Flowing Conversations</h2>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in
+          time loading for a more natural flow.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-text">
+        <h2>Your Users</h2>
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+          signed in to your app, Your users can start chatting immediately.
+        </p>
+      </div>
+      <img src="./images/illustration-your-users.svg" alt="grow-together">
+    </div>
+  </section>
+
+  <section>
+    <div class="small-card">
+      <h2>Ready to Build your community?</h2>
+      <button>Get Started For Free</button>
+    </div>
+  </section>
+
+  <footer>
+    <section>
+      <div class="footer-container">
+        <div class="first-div-container">
+          <img src="./images/logo.svg" alt="logo" class="logo-img">
+          <div class="first-div-container-child">
+            <img src="./images/icon-location.svg" alt="location" class="location-img">
+            <p class="location-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam odit qui excepturi ipsum ratione
+              voluptas.
+            </p>
+            <img src="./images/icon-phone.svg" alt="phone" class="img-phone">
+            <p class="phone-text">+1-543-123-4567</p>
+            <img src="./images/icon-email.svg" alt="">
+            <p class="mail-text">example@huddle.com</p>
+          </div>
+        </div>
+        <div class="second-div-container">
+          <ul>
+            <li><a href="#" class="common-a-tag">About Us</a></li>
+            <li> <a href="#" class="common-a-tag">What We Do</a></li>
+            <li><a href="#" class="common-a-tag">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="third-div-container">
+          <ul>
+            <li><a href="#" class="common-a-tag">Career</a></li>
+            <li> <a href="#" class="common-a-tag">Blog</a></li>
+            <li><a href="#" class="common-a-tag">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="fourth-div-container">
+          <span><a href="#"><i class="fa-brands fa-facebook-f"></i></a></span>
+          <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
+          <span><a href="#"><i class="fa-brands fa-instagram"></i></a></span>
+        </div>
+      </div>
+      <div class="copyright">
+        @Copyrigth 2025 Huddle. All right reserved.
+      </div>
+    </section>
+
+  </footer>
 </body>
 
 </html>
